manifests/incubator-manifests/incubator/puppet-forge/manifest.yaml

---
# Source: puppet-forge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plucking-chinchilla-puppet-forge
  labels:
    app: puppet-forge
    chart: puppet-forge-0.1.8
    release: plucking-chinchilla
    heritage: Tiller
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: puppet-forge
  selector:
    app: puppet-forge
    release: plucking-chinchilla
---
# Source: puppet-forge/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: plucking-chinchilla-puppet-forge
  labels:
    app: puppet-forge
    chart: puppet-forge-0.1.8
    release: plucking-chinchilla
    heritage: Tiller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: puppet-forge
        release: plucking-chinchilla
    spec:
      containers:
        - name: puppet-forge
          image: "hickey/puppet_forge:1.10.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - mountPath: /puppet/modules
              name: plucking-chinchilla-volume
              readOnly: false
          resources:
            limits:
              cpu: 200m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 16Mi
            
      volumes:
        - name: plucking-chinchilla-volume
          persistentVolumeClaim:
            claimName: plucking-chinchilla-claim
---
# Source: puppet-forge/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plucking-chinchilla-puppet-forge
  labels:
    app: puppet-forge
    chart: puppet-forge-0.1.8
    release: plucking-chinchilla
    heritage: Tiller
  annotations:
spec:
  backend:
    serviceName: plucking-chinchilla-puppet-forge
    servicePort: 80
